force-app/main/default/objects/Sprint__c.object
<CustomObject>
    <fields>
        <fullName>Active_Admins__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Active Admins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdminPTOAdjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Admin PTO Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avetta_Holiday_Adjustment__c</fullName>
        <label>Avetta Holiday Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bug_Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sprint that caused the Bug that needed the ESR</description>
        <label>Bug Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>Sprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CutOffDate__c</fullName>
        <defaultValue>Now()+7</defaultValue>
        <description>Sprint Cases Cut off date. Created for 02642914</description>
        <label>Cut Off Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deployment_Date__c</fullName>
        <label>Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Steps__c</fullName>
        <description>Steps to preform deployment with a changeset.</description>
        <label>Deployment Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ESRReason__c</fullName>
        <label>ESR Reason</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_There_a_Workaround__c</fullName>
        <description>Is there a workaround for the bug.</description>
        <label>Is There a Workaround?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Admin_Points__c</fullName>
        <description>Total Available Admin Story points per sprint. 

Created for 02642914</description>
        <formula>ROUND( 5 * (
( 5 * FLOOR( ( DATEVALUE( CutOffDate__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( CutOffDate__c ) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 8 * ( MOD( CutOffDate__c - DATETIMEVALUE( &apos;1900-01-08 14:00:00&apos; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( StartDate__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( StartDate__c ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 8 * ( MOD( StartDate__c - DATETIMEVALUE( &apos;1900-01-08 14:00:00&apos; ), 1) ) )
)
)
),
0 )
*0.7*Active_Admins__c - Avetta_Holiday_Adjustment__c - AdminPTOAdjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Admin Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Dev_Points__c</fullName>
        <description>Total Available Admin Story points per sprint.

Created for 02642914</description>
        <formula>ROUND( 6 * (
( 5 * FLOOR( ( DATEVALUE( CutOffDate__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( CutOffDate__c ) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 8 * ( MOD( CutOffDate__c - DATETIMEVALUE( &apos;1900-01-08 14:00:00&apos; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( StartDate__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( StartDate__c ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 8 * ( MOD( StartDate__c - DATETIMEVALUE( &apos;1900-01-08 14:00:00&apos; ), 1) ) )
)
)
),
0 )
*0.8*2 - Avetta_Holiday_Adjustment__c -  PTODevAdjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Dev Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTODevAdjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PTO Dev Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Deployment_Steps__c</fullName>
        <description>Steps to deploy Sprint items that can be changed with a Changeset.</description>
        <label>Post Deployment Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pre_Deployment__c</fullName>
        <label>Pre-Deployment</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Rollover_Case_Effort__c</fullName>
        <label>Rollover Case Effort</label>
        <summarizedField>Sprint_Cases__c.Actual_Effort__c</summarizedField>
        <summaryForeignKey>Sprint_Cases__c.Related_Sprint__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SprintEstimatedEffort__c</fullName>
        <label>Sprint Estimated Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sprint_Actual_Effort__c</fullName>
        <formula>Rollover_Case_Effort__c + Sprint_Case_Effort__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint Actual Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sprint_Case_Effort__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sprint Case Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Start Date of the Sprint. Created for 02642914</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Sprint</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grooming</fullName>
                </value>
                <value>
                    <fullName>In-progress</fullName>
                </value>
                <value>
                    <fullName>UAT In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready for Deployment</fullName>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
                <value>
                    <fullName>Rollback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sprint</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Deployment_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>SprintEstimatedEffort__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Deployed_Sprints</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Deployment_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deployed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sprint__c.SR_Sprint</value>
        </filters>
        <label>Deployed Sprints</label>
    </listViews>
    <listViews>
        <fullName>ESR</fullName>
        <columns>NAME</columns>
        <columns>Deployment_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sprint__c.ESR</value>
        </filters>
        <label>ESR</label>
        <sharedTo>
            <role>Administration</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Epics</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>SprintEstimatedEffort__c</columns>
        <columns>Deployment_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sprint__c.Epic</value>
        </filters>
        <label>Epics</label>
    </listViews>
    <listViews>
        <fullName>Open_Epics</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>SprintEstimatedEffort__c</columns>
        <columns>Deployment_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sprint__c.Epic</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Deployed,Rollback</value>
        </filters>
        <label>Open Epics</label>
        <sharedTo>
            <role>Administration</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Sprint</fullName>
        <columns>NAME</columns>
        <columns>Deployment_Date__c</columns>
        <columns>Max_Admin_Points__c</columns>
        <columns>SprintEstimatedEffort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Deployed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Sprint__c.SR_Sprint</value>
        </filters>
        <label>Open Sprint</label>
    </listViews>
    <nameField>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <recordTypes>
        <fullName>ESR</fullName>
        <active>true</active>
        <description>ESR Sprint for a bug</description>
        <label>ESR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Epic</fullName>
        <active>true</active>
        <description>This is to track tickets that are part of a larger project that will span multiple sprints.</description>
        <label>Epic</label>
    </recordTypes>
    <recordTypes>
        <fullName>SR_Sprint</fullName>
        <active>true</active>
        <description>Normal Sprint</description>
        <label>SR Sprint</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>